--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Syed Zaquan</title>
     <link rel="icon" href="images/favicon.png" type="image/png" />
 
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
+    <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet"> -->
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap');
+    </style>
     <link href="style.css" rel="stylesheet">
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="timeline.css" rel="stylesheet">
