--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" href="images/favicon.png" type="image/png" />
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crete+Round:400,400i&display=swap" rel="stylesheet">
     <!-- <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap');
     </style> -->
