--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="col-xs-6 col-sm-4 abilitypadding">
                 <div class="skillcard green">
                     <div class="innercard">
-                        <h1 class="title uititle">User Interface Design</h1>
+                        <h1 style="font-family: 'Crete Round', serif;" class="title uititle">User Interface Design</h1>
                         <img class="ability" src="images/uidesign.png">
                         <p class="maintext text-justify"> I am competent in designing a website wireframes and mobile interface using a latest designing tools like Adobe Photoshop alongside with the latest design principle and trends to impress the audience. </p>
                     </div>
