--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="icon" href="images/favicon.png" type="image/png" />
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Crete+Round:400,400i&display=swap" rel="stylesheet">
     <!-- <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap');
     </style> -->
@@ -64,7 +63,7 @@
             <div class="col-xs-6 col-sm-4 abilitypadding">
                 <div class="skillcard green">
                     <div class="innercard">
-                        <h1 style="font-family: 'Crete Round', serif;" class="title uititle">User Interface Design</h1>
+                        <h1 class="title uititle">User Interface Design</h1>
                         <img class="ability" src="images/uidesign.png">
                         <p class="maintext text-justify"> I am competent in designing a website wireframes and mobile interface using a latest designing tools like Adobe Photoshop alongside with the latest design principle and trends to impress the audience. </p>
                     </div>
