--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">Skills</h1>
+        <h1 class="skillhead">💡 Skills</h1>
         <div class="skillcard grey">
             <div class="innercard">
                 <h1 class="skilltitle title">Languages</h1>
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">Ability</h1>
+        <h1 class="skillhead">🧠 Ability</h1>
         <div class="row">
             <div class="col-xs-6 col-sm-4 abilitypadding">
                 <div class="skillcard green">
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">Education</h1>
+        <h1 class="skillhead">📚 Education</h1>
         <div class="page">
 
             <div class="timeline">
@@ -143,7 +143,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">Experiences</h1>
+        <h1 class="skillhead">💼 Experiences</h1>
         <div class="page">
 
             <div class="timeline">
@@ -174,7 +174,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">Projects</h1>
+        <h1 class="skillhead">📦 Projects</h1>
         <div class="skillcard grey">
             <div class="innercard">
                 <!-- <h1 class="skilltitle title">Languages</h1> -->
@@ -190,7 +190,32 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">Tahfiz Care Poster</h1>
+                                <h1 class="text-grey title">📄 Tahfiz Care Poster</h1>
+                                <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="open-modal" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Voilà!</h1>
+                            <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+                            <div><small>Check out</small></div>
+                            <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
+                        </div>
+                    </div>
+
+                    <div class="projectcard gold">
+                        <div class="projectcard-img" style="background-image:url('images/tahfizwebsite.png'); background-position: center center;">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <a href="#open-modal">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projectcard-content">
+                            <a href="#!">
+                                <h1 class="text-grey title">🕌 Tahfiz Care Website</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
@@ -209,31 +234,24 @@
                         <div class="projectcard-img" style="background-image:url('images/gsc.png');">
                             <div class="overlay">
                                 <div class="overlay-content">
-                                    <a href="#!">View Project</a>
+                                    <a href="#open-modal">View Project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">Tahfiz Care Website</h1>
+                                <h1 class="text-grey title">🎬 GSC Apps Redesign</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
                     </div>
-
-                    <div class="projectcard gold">
-                        <div class="projectcard-img" style="background-image:url('images/gsc.png');">
-                            <div class="overlay">
-                                <div class="overlay-content">
-                                    <a href="#!">View Project</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="projectcard-content">
-                            <a href="#!">
-                                <h1 class="text-grey title">GSC Apps Redesign</h1>
-                                <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
-                            </a>
+                    <div id="open-modal" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Voilà!</h1>
+                            <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+                            <div><small>Check out</small></div>
+                            <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
                         </div>
                     </div>
 
@@ -241,15 +259,24 @@
                         <div class="projectcard-img" style="background-image:url('images/100plus.png');">
                             <div class="overlay">
                                 <div class="overlay-content">
-                                    <a href="#!">View Project</a>
+                                    <a href="#open-modal">View Project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">100 Plus Redesign</h1>
+                                <h1 class="text-grey title">⚡ 100 Plus Redesign</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
+                        </div>
+                    </div>
+                    <div id="open-modal" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Voilà!</h1>
+                            <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+                            <div><small>Check out</small></div>
+                            <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
                         </div>
                     </div>
 
@@ -257,15 +284,24 @@
                         <div class="projectcard-img" style="background-image:url('images/matchbox.png');">
                             <div class="overlay">
                                 <div class="overlay-content">
-                                    <a href="#!">View Project</a>
+                                    <a href="#open-modal">View Project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">Cap Lada Matchbox</h1>
+                                <h1 class="text-grey title">🔥 Cap Lada Matchbox</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
+                        </div>
+                    </div>
+                    <div id="open-modal" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Voilà!</h1>
+                            <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+                            <div><small>Check out</small></div>
+                            <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
                         </div>
                     </div>
 
@@ -273,15 +309,24 @@
                         <div class="projectcard-img" style="background-image:url('https://cdn.dribbble.com/users/3248279/screenshots/6844649/1366_2.png');">
                             <div class="overlay">
                                 <div class="overlay-content">
-                                    <a href="#!">View Project</a>
+                                    <a href="#open-modal">View Project</a>
                                 </div>
                             </div>
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">Myself Portrait</h1>
+                                <h1 class="text-grey title">👓 Myself Portrait</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
+                        </div>
+                    </div>
+                    <div id="open-modal" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Voilà!</h1>
+                            <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+                            <div><small>Check out</small></div>
+                            <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
                         </div>
                     </div>
 
