--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">💡 Skills</h1>
+        <h1 class="skillhead"><i data-emoji="💡"></i> Skills</h1>
         <div class="skillcard grey">
             <div class="innercard">
                 <h1 class="skilltitle title">Languages</h1>
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">🧠 Ability</h1>
+        <h1 class="skillhead"><i data-emoji="🧠"></i> Ability</h1>
         <div class="row">
             <div class="col-xs-6 col-sm-4 abilitypadding">
                 <div class="skillcard green">
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">📚 Education</h1>
+        <h1 class="skillhead"><i data-emoji="📚"></i> Education</h1>
         <div class="page">
 
             <div class="timeline">
@@ -143,7 +143,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">💼 Experiences</h1>
+        <h1 class="skillhead"><i data-emoji="💼"></i> Experiences</h1>
         <div class="page">
 
             <div class="timeline">
@@ -174,7 +174,7 @@
             </div>
         </div>
 
-        <h1 class="skillhead">📦 Projects</h1>
+        <h1 class="skillhead"><i data-emoji="📦"></i> Projects</h1>
         <div class="skillcard grey">
             <div class="innercard">
                 <!-- <h1 class="skilltitle title">Languages</h1> -->
@@ -190,7 +190,7 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">📄 Tahfiz Care Poster</h1>
+                                <h1 class="text-grey title"><i data-emoji="📄"></i> Tahfiz Care Poster</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">🕌 Tahfiz Care Website</h1>
+                                <h1 class="text-grey title"><i data-emoji="🕌"></i> Tahfiz Care Website</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">🎬 GSC Apps Redesign</h1>
+                                <h1 class="text-grey title"><i data-emoji="🎬"></i> GSC Apps Redesign</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
@@ -265,7 +265,7 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">⚡ 100 Plus Redesign</h1>
+                                <h1 class="text-grey title"><i data-emoji="⚡"></i> 100 Plus Redesign</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
@@ -290,7 +290,7 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">🔥 Cap Lada Matchbox</h1>
+                                <h1 class="text-grey title"><i data-emoji="🔥"></i> Cap Lada Matchbox</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
@@ -315,7 +315,7 @@
                         </div>
                         <div class="projectcard-content">
                             <a href="#!">
-                                <h1 class="text-grey title">👓 Myself Portrait</h1>
+                                <h1 class="text-grey title"><i data-emoji="👓"></i> Myself Portrait</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
