User Preference Dark/Light Mode

--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
             <div class="innercard">
                 <img class="profile" src="images/a.png">
                 <div class="theme-switch-wrapper">
+                    <em class="lightlabel">Light</em>
                     <label class="theme-switch" for="checkbox">
                         <input type="checkbox" id="checkbox" />
                         <div class="slidertoggle round"></div>
                     </label>
-                    <em>Enable Dark Mode!</em>
+                    <em class="darklabel">Dark</em>
                 </div>
                 <h1 class="maintitle title">UI/UX, Graphic and Website Designer</h1>
                 <p class="maintext"> I have studied Software Engineering at University of Kuala Lumpur and now have a passion on building and designing a beautiful website with the latest trend of design </p>
@@ -256,7 +257,7 @@
                     </div>
 
                     <div class="projectcard gold">
-                        <div class="projectcard-img" style="background-image:url('images/100plus.png');">
+                        <div class="projectcard-img" style="background-image:url('images/100plus.png'); background-position: center center;">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <a href="#open-modal">View Project</a>
@@ -281,7 +282,7 @@
                     </div>
 
                     <div class="projectcard gold">
-                        <div class="projectcard-img" style="background-image:url('images/matchbox.png');">
+                        <div class="projectcard-img" style="background-image:url('images/matchbox.png'); background-position: center center;">
                             <div class="overlay">
                                 <div class="overlay-content">
                                     <a href="#open-modal">View Project</a>
@@ -374,7 +375,6 @@
         }
 
         toggleSwitch.addEventListener('change', switchTheme, false);
-        //# sourceURL=pen.js
     </script>
 </body>
 
