--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet">
-
+    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
     <!-- <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap');
     </style> -->
@@ -23,6 +24,7 @@
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="timeline.css" rel="stylesheet">
     <link href="project.css" rel="stylesheet">
+    <link href="svg.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,6 +45,9 @@
                 </div>
                 <h1 class="maintitle title">UI/UX, Graphic and Website Designer</h1>
                 <p class="maintext"> I have studied Software Engineering at University of Kuala Lumpur and now have a passion on building and designing a beautiful website with the latest trend of design </p>
+                <a href="#" class="resume" role="button" aria-pressed="true">My Resume
+                <svg class="svg-inline--fa fa-google-drive fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google-drive" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"></path></svg>
+                </a>
             </div>
         </div>
 
