--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet">
-    
+
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
     <!-- <style>
         @import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap');
@@ -46,7 +46,12 @@
                 <h1 class="maintitle title">UI/UX, Graphic and Website Designer</h1>
                 <p class="maintext"> I have studied Software Engineering at University of Kuala Lumpur and now have a passion on building and designing a beautiful website with the latest trend of design </p>
                 <a href="#" class="resume" role="button" aria-pressed="true">My Resume
-                <svg class="svg-inline--fa fa-google-drive fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google-drive" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"></path></svg>
+                    <!-- <svg class="svg-inline--fa fa-google-drive fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google-drive" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                        <path fill="currentColor" d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"></path>
+                    </svg> -->
+                    <svg class="svg-inline--fa fa-w-16" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 50 50">
+                            <path fill="currentColor" d="M 41.707031 13.792969 L 30.207031 2.292969 C 30.019531 2.105469 29.765625 2 29.5 2 L 11.492188 2 C 9.566406 2 8 3.5625 8 5.480469 L 8 43.902344 C 8 46.160156 9.84375 48 12.113281 48 L 37.886719 48 C 40.15625 48 42 46.160156 42 43.902344 L 42 14.5 C 42 14.234375 41.894531 13.980469 41.707031 13.792969 Z M 26 38 L 17 38 L 17 36 L 26 36 Z M 33 34 L 17 34 L 17 32 L 33 32 Z M 33 30 L 17 30 L 17 28 L 33 28 Z M 33 26 L 17 26 L 17 24 L 33 24 Z M 31.667969 14 C 30.746094 14 30 13.253906 30 12.332031 L 30 4.914063 L 39.085938 14 Z "></path>
+                    </svg>
                 </a>
             </div>
         </div>
