--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <h1 class="maintitle title">UI/UX, Graphic and Website Designer</h1>
                 <p class="maintext"> I have studied Software Engineering at University of Kuala Lumpur and now have a passion on building and designing a beautiful website with the latest trend of design </p>
                 <a href="https://drive.google.com/file/d/1dPNh5pDtGryKVl6ISJSAwUk2TyaJTF9n/view" target="_blank" class="resume" role="button" aria-pressed="true">My Resume
-                    <!-- <svg class="svg-inline--fa fa-google-drive fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google-drive" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                    <!-- <svg class="svg-inline-fa fa-google-drive fa-w-16" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="google-drive" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
                         <path fill="currentColor" d="M339 314.9L175.4 32h161.2l163.6 282.9H339zm-137.5 23.6L120.9 480h310.5L512 338.5H201.5zM154.1 67.4L0 338.5 80.6 480 237 208.8 154.1 67.4z"></path>
                     </svg> -->
                     <svg class="svg-inline--fa fa-w-16" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 50 50">
@@ -346,6 +346,31 @@
                         <div class="projectcard-content">
                             <a href="#!">
                                 <h1 class="text-grey title"><i data-emoji="🕌"></i> Tahfiz Care Website</h1>
+                                <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="open-modal" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Voilà!</h1>
+                            <div>A CSS-only modal based on the :target pseudo-class. Hope you find it helpful.</div>
+                            <div><small>Check out</small></div>
+                            <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
+                        </div>
+                    </div>
+                    
+                    <div class="projectcard gold">
+                        <div class="projectcard-img" style="background-image:url('images/beshnas.png'); ">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <a href="#open-modal">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projectcard-content">
+                            <a href="#!">
+                                <h1 class="text-grey title"><i data-emoji="💻"></i> Beshnas Website</h1>
                                 <p class="skilltitle title">Lorem ipsum dolor sit amet consectetur, lorem ipsum dolor</p>
                             </a>
                         </div>
