--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <style></style>
     <link href="style.css" rel="stylesheet" />
     <link href="bootstrap.min.css" rel="stylesheet" />
+    <link href="color.css" rel="stylesheet" />
+    <link href="fontawesome.css" rel="stylesheet" />
     <link href="timeline.css" rel="stylesheet" />
     <link href="project.css" rel="stylesheet" />
     <link href="svg.css" rel="stylesheet" />
@@ -79,7 +81,15 @@
                             </p>
                         </div>
                         <div><small>Check out my social network</small></div>
-                        <a href="https://aminoeditor.com" target="_blank">👉 Amino: Live CSS Editor for Chrome</a>
+                        <div class="text-center social">
+                            <a class="links email" href="https://twitter.com/Masquetina/" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
+                            <a class="links phone" href="https://twitter.com/Masquetina/" target="_blank"><i class="fas fa-phone fa-2x"></i></a>
+                            <a class="links twitter" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                            <a class="links instagram" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                            <a class="links dribbble" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-dribbble fa-2x"></i></a>
+                            <a class="links linkedin" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        </div>
+
                     </div>
                 </div>
 
