--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
                                 I'm really interested if I can have an opportunities to distribute my ability and skills to you.
                             </p>
                         </div>
-                        <div><small>Check out my social network</small></div>
-                        <div class="text-center social">
-                            <a class="links email" href="https://twitter.com/Masquetina/" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
-                            <a class="links phone" href="https://twitter.com/Masquetina/" target="_blank"><i class="fas fa-phone fa-2x"></i></a>
-                            <a class="links twitter" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-                            <a class="links instagram" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                            <a class="links dribbble" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-dribbble fa-2x"></i></a>
-                            <a class="links linkedin" href="https://twitter.com/Masquetina/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
+                        <div><small>Want to get in touch?</small></div>
+                        <div class="social-banner">
+                          <div class="text-center social">
+                            <a class="links email" href="mailto:syedzaquan@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a>
+                            <a class="links phone" href="tel:0139901824" target="_blank"><i class="fas fa-phone fa-2x"></i></a>
+                            <a class="links twitter" href="https://twitter.com/syedzarulzaquan/" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
+                            <a class="links instagram" href="https://instagram.com/syedzaquan/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+                            <a class="links dribbble" href="https://dribbble.com/syedzaquan/" target="_blank"><i class="fab fa-dribbble fa-2x"></i></a>
+                            <a class="links linkedin" href="https://www.linkedin.com/in/syedzaquan/" target="_blank"><i class="fab fa-linkedin-in fa-2x"></i></a>
                         </div>
+                      </div>
 
                     </div>
                 </div>
