--- a/index.html
+++ b/index.html
@@ -512,6 +512,41 @@
                             <a href="https://cdn.dribbble.com/users/3248279/screenshots/6844649/1366_2.png" target="_blank">🖼️ Full Screen</a>
                         </div>
                     </div>
+                    
+                    <div class="projectcard gold">
+                        <div class="projectcard-img" style="background-image:url('images/vans2.png'); background-position: center;">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <a href="#open-modal8">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projectcard-content">
+                            <a href="#!">
+                                <h1 class="text-grey title" style="margin-top: 10px;">
+                                    <i data-emoji="👟"></i> Vans Custom Culture
+                                </h1>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="open-modal8" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Vans Custom Culture Contest</h1>
+                            <p>
+                                Recently I joined a competition by Vans which is Vans Custom Culture Contest. My design of Malaysia Traditional Nasi Lemak was approved by Vans and I managed to proceed over the next stage which is 'Voting Stage'. Hope you guys can leave a vote for me!
+                            </p>
+                            <div class="innershowcase">
+                                <img class="showcase" src="images/thumbvans.png" />
+                            </div>
+
+                            <div><small>Check out</small></div>
+                            <a href="images/vans1.png" target="_blank">🖼️ Image 1</a>
+                            <a href="images/vans2.png" target="_blank"> Image 2</a>
+                            <a href="images/vans3.png" target="_blank"> Image 3</a><br />
+                            <a href="https://custom-culture.vans.com.my/design?submission_id=36763" target="_blank">👍 Vote Now!</a>
+                        </div>
+                    </div>
                 </div>
                 <!-- <ul class="list" style="list-style-type: none;">
                     <li class="listitemgreen"> FYP Poster </li>
