Update Project and Footer

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                             <a href="#!" title="Close" class="modal-close">Close</a>
                             <h1>Beshnas Technology Website</h1>
                             <p>
-                                Landing Page project during my internship programme using HTML, CSS and JavaScript
+                                Landing Page for Beshnas Technology Sdn. Bhd. during my internship programme using HTML, CSS and JavaScript
                             </p>
                             <div class="innershowcase">
                                 <div class="projectcard-img showcase" style="background-image:url('images/beshnas.png'); ">
@@ -343,6 +343,38 @@
 
                             <div><small>Check out</small></div>
                             <a href="https://www.beshnas.org" target="_blank">🌏 Website</a>
+                        </div>
+                    </div>
+
+                    <div class="projectcard gold">
+                        <div class="projectcard-img" style="background-image:url('images/hamta.png'); background-size: cover;">
+                            <div class="overlay">
+                                <div class="overlay-content">
+                                    <a href="#open-modal9">View Project</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="projectcard-content">
+                            <a href="#!">
+                                <h1 class="text-grey title" style="margin-top: 10px;">
+                                    <i data-emoji="🌸"></i> Hamta Saffron Page
+                                </h1>
+                            </a>
+                        </div>
+                    </div>
+                    <div id="open-modal9" class="modal-window">
+                        <div>
+                            <a href="#!" title="Close" class="modal-close">Close</a>
+                            <h1>Hamta Saffron Landing Page</h1>
+                            <p>
+                                Landing Page project for Hamta International Group during my internship programme using HTML, CSS and JavaScript
+                            </p>
+                            <div class="innershowcase">
+                                <img class="showcase" src="images/hamta.png" />
+                            </div>
+
+                            <div><small>Check out</small></div>
+                            <a href="http://www.hamta.org/saffron/web2/index.php" target="_blank">🌏 Website</a>
                         </div>
                     </div>
                 </div>
@@ -512,7 +544,7 @@
                             <a href="https://cdn.dribbble.com/users/3248279/screenshots/6844649/1366_2.png" target="_blank">🖼️ Full Screen</a>
                         </div>
                     </div>
-                    
+
                     <div class="projectcard gold">
                         <div class="projectcard-img" style="background-image:url('images/vans2.png'); background-position: center;">
                             <div class="overlay">
@@ -562,6 +594,12 @@
                 <span class="patreon__msg">You find more of interesting content on <a class="patreon__link" href="https://www.patreon.com/melnik909" target="_blank" rel="noopener noreferrer">my Patreon account</a></span>
             </div>
         </div> -->
+    </div>
+
+    <div class="container text-center">
+        <p class="endnote">Designed with <svg class="svg-inline--fa fa-heart fa-w-16 love" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
+                <path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
+            </svg><!-- <i class="fas fa-heart love"></i> --> by <b>Syed Zaquan</b></p>
     </div>
     <script id="rendered-js">
         const toggleSwitch = document.querySelector(
