--- a/index.html
+++ b/index.html
@@ -597,9 +597,7 @@
     </div>
 
     <div class="container text-center">
-        <p class="endnote">Designed with <svg class="svg-inline--fa fa-heart fa-w-16 love" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="heart" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg="">
-                <path fill="currentColor" d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"></path>
-            </svg><!-- <i class="fas fa-heart love"></i> --> by <b>Syed Zaquan</b></p>
+        <p class="endnote">Designed by <b>Syed Zaquan</b> 👨🏼‍💻</p>
     </div>
     <script id="rendered-js">
         const toggleSwitch = document.querySelector(
