--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     </div>
 
     <div class="container text-center">
-        <p class="endnote">Designed by <b>Syed Zaquan</b> 👨🏼‍💻</p>
+        <p class="endnote">Designed by <b>Syed Zaquan</b> and his 🐱</p>
     </div>
     <script id="rendered-js">
         const toggleSwitch = document.querySelector(
